syntax = "proto3";

package stock_service;

service StockService {
  rpc ListTransactions (ListTransactionsRequest) returns (ListTransactionsResponse);
  rpc CreateTransaction (CreateTransactionRequest) returns (CreateTransactionResponse);
}

message Transaction {
  string id = 1;
  string symbol = 2;
  double purchaseCost = 3;
  double count = 4;
  int64 createdAt = 5;
}

message ListTransactionsRequest {
  string name = 1;
}

message ListTransactionsResponse {
  repeated Transaction transactions = 1;
}

message CreateTransactionRequest {
  string symbol = 1;
  double purchaseCost = 2;
}

message CreateTransactionResponse {
  string id = 1;
}
